# advent-of-code-2024

./: .gitignore  Cargo.toml
.cargo/: Cargo.toml
.github/workflows/: codspeed.yml
01/day1/src/: main.rs
benches/: benchmark.rs  my_benchmark.rs
python/: 01.py  02.py  03.py  04.py  05.py  06.py
src/: 01.py  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  lib.rs  main.rs  sigma.asm
src/2/: 02.py  unsafe.rs
src/3/: 03.py
