[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
rustc-hash = "2"
heapless = "0.7"


[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
codspeed-criterion-compat = "2.3.0"

[[bench]]
name = "my_benchmark"
harness = false