[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
rustc-hash = "2"
regex = "1.10.2"
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }

[dev-dependencies]


[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1

[lib]
path = "src/lib.rs"

[[bin]]
name = "day1"
path = "src/bin/day1.rs"

[[bin]]
name = "day2"
path = "src/bin/day2.rs"

[[bin]]
name = "day3"
path = "src/bin/day3.rs"